api_versioned_docs/version-12.0.4/avalonia/automation/peers/index.mdx
---
title: 'Avalonia.Automation.Peers'
hide_title: true
slug: '/avalonia/automation/peers'
uid: 'Avalonia.Automation.Peers'
commentId: 'N:Avalonia.Automation.Peers'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Automation.Peers'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Peers Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Automation.Peers`

</div>

## Types

- [AutoCompleteBoxAutomationPeer](autocompleteboxautomationpeer.mdx)
- [AutomationControlType](automationcontroltype.mdx)
- [AutomationLandmarkType](automationlandmarktype.mdx)
- [AutomationPeer](automationpeer.mdx) - Provides a base class that exposes an element to UI Automation.
- [ButtonAutomationPeer](buttonautomationpeer.mdx)
- [CalendarAutomationPeer](calendarautomationpeer.mdx)
- [CalendarDatePickerAutomationPeer](calendardatepickerautomationpeer.mdx)
- [CarouselPageAutomationPeer](carouselpageautomationpeer.mdx)
- [ColorSpectrumAutomationPeer](colorspectrumautomationpeer.mdx)
- [ComboBoxAutomationPeer](comboboxautomationpeer.mdx)
- [ContentControlAutomationPeer](contentcontrolautomationpeer.mdx)
- [ContentPageAutomationPeer](contentpageautomationpeer.mdx)
- [ControlAutomationPeer](controlautomationpeer.mdx) - An automation peer which represents a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control) element.
- [DatePickerAutomationPeer](datepickerautomationpeer.mdx)
- [DrawerPageAutomationPeer](drawerpageautomationpeer.mdx)
- [ItemsControlAutomationPeer](itemscontrolautomationpeer.mdx)
- [ListItemAutomationPeer](listitemautomationpeer.mdx)
- [MenuItemAutomationPeer](menuitemautomationpeer.mdx)
- [NativeMenuBarAutomationPeer](nativemenubarautomationpeer.mdx)
- [NavigationPageAutomationPeer](navigationpageautomationpeer.mdx)
- [NoneAutomationPeer](noneautomationpeer.mdx) - An automation peer which represents an element that is exposed to automation as non-
interactive or as not contributing to the logical structure of the application.
- [NumericUpDownAutomationPeer](numericupdownautomationpeer.mdx)
- [PipsPagerAutomationPeer](pipspagerautomationpeer.mdx) - An automation peer for [Avalonia.Controls.PipsPager](xref:Avalonia.Controls.PipsPager).
- [PopupAutomationPeer](popupautomationpeer.mdx)
- [PopupRootAutomationPeer](popuprootautomationpeer.mdx)
- [RangeBaseAutomationPeer](rangebaseautomationpeer.mdx)
- [ScrollBarAutomationPeer](scrollbarautomationpeer.mdx)
- [ScrollViewerAutomationPeer](scrollviewerautomationpeer.mdx)
- [SelectingItemsControlAutomationPeer](selectingitemscontrolautomationpeer.mdx)
- [SplitButtonAutomationPeer](splitbuttonautomationpeer.mdx)
- [TabbedPageAutomationPeer](tabbedpageautomationpeer.mdx)
- [TextBlockAutomationPeer](textblockautomationpeer.mdx)
- [TextBoxAutomationPeer](textboxautomationpeer.mdx)
- [TimePickerAutomationPeer](timepickerautomationpeer.mdx)
- [ToggleButtonAutomationPeer](togglebuttonautomationpeer.mdx)
- [ToggleSplitButtonAutomationPeer](togglesplitbuttonautomationpeer.mdx)
- [ToolTipAutomationPeer](tooltipautomationpeer.mdx)
- [TreeViewAutomationPeer](treeviewautomationpeer.mdx)
- [TreeViewItemAutomationPeer](treeviewitemautomationpeer.mdx)
- [UnrealizedElementAutomationPeer](unrealizedelementautomationpeer.mdx) - An automation peer which represents an unrealized element
- [WindowAutomationPeer](windowautomationpeer.mdx)
- [WindowBaseAutomationPeer](windowbaseautomationpeer.mdx)
</ApiRefPage>

